--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -6,6 +6,6 @@ jdbc.password =
 
 #hibernate config
 hibernate.dialect = org.hibernate.dialect.MySQLDialect
-hibernate.show_sql = false
+hibernate.show_sql = true
 hibernate.format_sql = true
 hibernate.hbm2ddl.auto = update
